// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Snapshot > Default 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateIdle_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Button Snapshot > PositionActive 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionActive_6bb612 _LabelStateIdle_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Button Snapshot > PositionIdle 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateIdle_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Button Snapshot > StateError 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateError_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Button Snapshot > StateIdle 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateIdle_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;

exports[`Button Snapshot > StateSuccess 1`] = `
<div>
  <span
    class="_Label_6bb612 _LabelPositionIdle_6bb612 _LabelStateSuccess_6bb612"
  >
    <b>
      Label
    </b>
     text
  </span>
</div>
`;
